--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,14 @@
   font-style: normal;
   line-height: normal; /* If you want to specify the line height, you can set it explicitly */
 }
+
+.sectiontitle {
+  @apply font-semibold text-white; /* Tailwind classes */
+  -webkit-text-stroke-width: 0px;
+  -webkit-text-stroke-color: #fff;
+  font-family: "Neue Reman Sans", sans-serif;
+  font-size: 48px;
+  font-style: normal;
+  line-height: 48px; /* 117.647% */
+  letter-spacing: 2px;
+}
