--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,14 @@
   line-height: 48px; /* 117.647% */
   letter-spacing: 2px;
 }
+
+.sectiontitle-sm-nc {
+  @apply font-semibold; /* Tailwind classes */
+  -webkit-text-stroke-width: 0px;
+  -webkit-text-stroke-color: #fff;
+  font-family: "Neue Reman Sans", sans-serif;
+  font-size: 24px;
+  font-style: normal;
+  line-height: 48px; /* 117.647% */
+  letter-spacing: 2px;
+}
