--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,14 @@
   line-height: 48px; /* 117.647% */
   letter-spacing: 2px;
 }
+
+.sectiontitle-ns-nc {
+  @apply font-semibold; /* Tailwind classes */
+  -webkit-text-stroke-width: 0px;
+  -webkit-text-stroke-color: #fff;
+  font-family: "Neue Reman Sans", sans-serif;
+
+  font-style: normal;
+  /* 117.647% */
+  letter-spacing: 2px;
+}
